<resources>
    <string name="app_name">tBench</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome">Welcome!</string>
    <string name="email_login">E-mail</string>
    <string name="password_login">Password</string>
    <string name="full_name_register">Full Name</string>
    <string name="username_register">Username</string>
    <string name="email_register">E-mail</string>
    <string name="password_register">Password</string>
    <string name="confirm_password_register">Confirm Password</string>
    <string name="sign_in_login">Sign In</string>
    <string name="sign_up_register">Sign Up</string>
    <string name="dont_have_account">Don\'t have an Account?</string>
    <string name="already_have_account">Already have an Account?</string>
    <string name="content_name">Content</string>
    <string name="messages_name">Messages</string>
    <string name="notifications_name">Notifications</string>
    <string name="username_profile">Username</string>
    <string name="search_fragment">Search…</string>
    <string name="profile_info_profile">Profile Info</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="content_profile">Content</string>
    <string name="followers_profile">Followers</string>
    <string name="followings_profile">Followings</string>
    <string name="city_profile">City:</string>
    <string name="birthday_profile">Birthday:</string>
    <string name="specialty_profile">Specialty:</string>
    <string name="more_info_profile">More Info</string>
    <string name="close_more_info_profile">Close</string>
    <string name="nothing_info_profile">There is nothing here yet</string>
    <string name="best_content">This will be the best content…</string>
    <string name="clear">Clear</string>
    <string name="logout">Log Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="city_edit_profile">City</string>
    <string name="birthday_edit_profile">Birthday</string>
    <string name="specialty_edit_profile">Specialty</string>
    <string name="comments">Comments</string>
    <string name="write_comment">Comment…</string>
    <string name="comment_text">Comment</string>
    <string name="delete">Delete</string>
    <string name="add_content">Add Content</string>
    <string name="wait">Please, wait…</string>
    <string name="write_full_name">Please write your Full Name first</string>
    <string name="write_user_name">Please write your Username first</string>
    <string name="write_profile_info">Please write your Profile Info first</string>
    <string name="select_image">Please select image first</string>
    <string name="updated_successfully">Account information has been updated successfully</string>
    <string name="start_content">There is nothing here yet.
        Subscribe to someone to view content</string>
    <string name="account_settings">Account Settings</string>
    <string name="updating_profile">Please wait, we are updating your profile</string>
    <string name="uploaded_successfully">Content uploaded successfully</string>
    <string name="enter_email">Please enter your E-mail</string>
    <string name="enter_password">Please enter your Password</string>
    <string name="confirm_password">Please confirm your Password</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="account_created_successfully">Account has been created successfully</string>
    <string name="add_story">Add Story</string>
    <string name="story_uploaded_successfully">Story uploaded successfully</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_sent">E-mail sent</string>
    <string name="reset">Reset</string>
    <string name="delete2">Delete?</string>
    <string name="deleted_story">Story Deleted</string>
    <string name="deleted_content">Content Deleted</string>
    <string name="settings">Settings</string>
    <string name="write_message">Message…</string>
    <string name="message_text">Message</string>
    <string name="write_comment_first">Please write comment first</string>
    <string name="write_message_first">Please write message first</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="info">Info</string>
    <string name="max_temp">Max Temp</string>
    <string name="min_temp">Min Temp</string>
    <string name="error">Something went wrong</string>
    <string name="deleted">Deleted</string>
    <string name="not_deleted">Failed, Not Deleted</string>
    <string name="sent">Sent</string>
    <string name="seen">Seen</string>
    <string name="last_message">Last Message</string>
    <string name="start_messages">There is nothing here yet</string>
    <string name="no_messages">No Messages</string>
    <string name="image_sent">Photo</string>
    <string name="error_content">No content found.
        It may have been deleted</string>
    <string name="get_started">Let\'s Get Started!</string>
    <string name="mp1">The owner of this account is a member of the tBench team</string>
    <string name="mp2">tBench Team</string>
    <string name="emoji">Сhoose emoji</string>
    <string name="check1">Verified profile</string>
    <string name="check2">Account verified by tBench team</string>
    <string name="heart1">Heart</string>
    <string name="heart2">An idiot in love</string>
    <string name="info_pop">Profile Info:</string>
    <string name="emoji2">Emoji</string>
    <string name="select_emoji">Select emoji</string>
    <string name="displayed_emoji">It will be displayed next to your name</string>
    <string name="sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="messages_restricted">Messages are restricted</string>
    <string name="page_deleted">The user\'s page was deleted by its owner</string>
    <string name="no_information">Sorry, no user information is available</string>
    <string name="oops">Oops…</string>
    <string name="account_has_been_deleted">It seems your account has been deleted</string>
    <string name="restore_it">Here you can restore it</string>
    <string name="restore">Restore</string>
    <string name="hub">Hub</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="message">Message</string>
    <string name="weather">Weather</string>
    <string name="help">Help</string>
    <string name="about">About tBench</string>
    <string name="game1">Gamer</string>
    <string name="game2">I love to play computer games</string>
    <string name="gift1">Gift</string>
    <string name="gift2">Although I myself am far from a gift, I love giving them to people</string>
    <string name="face11">Depression</string>
    <string name="face12">I\'m drowning in a sea of loneliness and depression</string>
    <string name="face21">Sick</string>
    <string name="face22">While everyone is having fun and walking, I lie in my bed and drink tea</string>
    <string name="face31">Star</string>
    <string name="face32">Why is it dark outside? Because your star is here</string>
    <string name="crown1">Crown</string>
    <string name="crown2">Help me take the crown off my head</string>
    <string name="burger1">Burger</string>
    <string name="burger2">So juicy and delicious… Mmm…</string>
    <string name="just_a_social_network">Just a social network</string>
    <string name="not">(Not)</string>
    <string name="tBench">tBench</string>
    <string name="tBench_is_a_startup">tBench is a startup of a young programmer and designer from Russia, whose goal is to share their dreams, goals, ideas and news with people from all over the world.</string>
    <string name="find_us">Where can you find us?</string>
    <string name="based">tBench team is based in</string>
    <string name="Smolensk">Smolensk</string>
    <string name="in_the_future">In the future, we plan to add audio and video calls, music, communities, marketplace and stickers to tBench, the ability to add and view videos, and much more</string>
    <string name="team">tBench Team</string>
    <string name="Nikita_Lokhmatov">Nikita Lokhmatov</string>
    <string name="thank">Thank you for using tBench!</string>
    <string name="general_questions">General questions</string>
    <string name="account">Account</string>
    <string name="privacy">Privacy</string>
    <string name="q1">What if I forgot my password?</string>
    <string name="q2">How do I get a deleted account back?</string>
    <string name="q3">Can I link two accounts to one e-mail?</string>
    <string name="q4">Can I change the email address to which my account is linked?</string>
    <string name="q5">Can I recover deleted messages?</string>
    <string name="q6">How do I get a verification check mark next to my name?</string>
    <string name="q7">How to join the tBench team?</string>
    <string name="q8">How do I block another user?</string>
    <string name="q9">How do I delete my page?</string>
    <string name="q10">How to find a person by their username?</string>
    <string name="q11">Can I delete a conversation with a person?</string>
    <string name="q12">How do I find a message?</string>
    <string name="q13">How do I record a voice message?</string>
    <string name="q14">Can I write a message to a deleted user?</string>
    <string name="q15">Can I forward messages to another user?</string>
    <string name="a1">If you forgot your password for some reason, you can always reset it and come up with a new one. To do this, log out of your account. You will be taken to the login window. Below the e-mail line is the "Forgot password?" Button. Click on it and enter your e-mail. Then follow the instructions in the email you receive.</string>
    <string name="a2">In order to recover a deleted account, try logging into it. You will be taken to the page of the deleted account, where you will need to click on the "Restore" button. After that, your account will be restored. I would like to note that deleted accounts do not have a recovery period, that is, you can recover it even after a very long period of time.</string>
    <string name="a3">Only one tBench account can be linked to one e-mail address. Even if you deleted the old account, you will not be able to create a new one to this address. How to completely delete an account is written on the Help page.</string>
    <string name="a4">You cannot replace the e-mail address to which your tBench account is linked.</string>
    <string name="a5">If you deleted the message, you cannot recover it. Unfortunately, there are things in the world that cannot be fixed or returned. And trust us, deleted messages are not the most valuable of them. Next time, try to think before deleting something. And if you still delete them, do not be discouraged because of this, because life will not end there)</string>
    <string name="a6">Verification is a confirmation that a real person or organization is behind the profile. Famous people (musicians, athletes, actors) or large companies and organizations can get it. The main criterion for getting a tick is publication in the media or on the Internet. If you are a famous person or organization, write to the tBench team at tbenchteam@gmail.com</string>
    <string name="any_questions">If you still have any questions, write to tbenchteam@gmail.com and we will do our best to help you. Thank you for helping us be better for you!</string>
</resources>