<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">



    <TextView
        android:id="@+id/get_started"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="25dp"
        android:text="@string/get_started"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true">
    </TextView>



    <RelativeLayout
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/get_started"
        android:layout_marginTop="30dp"
        android:transitionName="loginLayoutTransition"
        android:background="@drawable/login_registration_bg"
        android:paddingTop="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_above="@+id/registration_line"
            android:layout_marginBottom="10dp">


            <EditText
                android:id="@+id/full_name_register"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingLeft="20dp"
                android:background="@drawable/button_main"
                android:hint="@string/full_name_register"
                android:inputType="textPersonName"
                android:textColorHint="@color/colorLight"
                android:textColor="@color/accent"
                android:textSize="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp">
            </EditText>


            <EditText
                android:id="@+id/username_register"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingLeft="20dp"
                android:background="@drawable/button_main"
                android:hint="@string/username_register"
                android:inputType="text"
                android:textColorHint="@color/colorLight"
                android:textColor="@color/accent"
                android:textSize="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp">
            </EditText>


            <EditText
                android:id="@+id/email_register"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingLeft="20dp"
                android:background="@drawable/button_main"
                android:hint="@string/email_login"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorLight"
                android:textColor="@color/accent"
                android:textSize="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp">
            </EditText>


            <EditText
                android:id="@+id/password_register"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingLeft="20dp"
                android:background="@drawable/button_main"
                android:hint="@string/password_login"
                android:inputType="textPassword"
                android:textColorHint="@color/colorLight"
                android:textColor="@color/accent"
                android:textSize="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp">
            </EditText>


            <EditText
                android:id="@+id/confirm_password_register"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingLeft="20dp"
                android:background="@drawable/button_main"
                android:hint="@string/confirm_password_register"
                android:inputType="textPassword"
                android:textColorHint="@color/colorLight"
                android:textColor="@color/accent"
                android:textSize="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="40dp">
            </EditText>



            <Button
                android:id="@+id/register_btn"
                android:layout_width="160dp"
                android:layout_height="55dp"
                android:background="@drawable/button_login"
                android:layout_gravity="center"
                android:text="@string/sign_up_register"
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="50dp">
            </Button>


        </LinearLayout>


        <ImageView
            android:id="@+id/registration_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="10dp"
            android:layout_above="@+id/login_registration_btn_layout">
        </ImageView>



        <LinearLayout
            android:id="@+id/login_registration_btn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:textSize="15dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorWhite"
                android:textAlignment="center"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:id="@+id/registration_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_login"
                android:textSize="18dp"
                android:textColor="@color/colorAccent"
                android:textAlignment="center"
                android:textStyle="bold">
            </TextView>

        </LinearLayout>

    </RelativeLayout>


    <ImageView
        android:id="@+id/registration_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B0FFFFFF"
        android:visibility="gone">
    </ImageView>


    <ProgressBar
        android:id="@+id/registration_progress_bar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerInParent="true"
        android:visibility="gone">
    </ProgressBar>


</RelativeLayout>